fixing form elements alignment

--- a/src/components/ShortenComponent/ShortenForm.css
+++ b/src/components/ShortenComponent/ShortenForm.css
@@ -21,4 +21,8 @@
     flex-direction: column;
     background-image: url('../../assets/bg-shorten-mobile.svg');
   }
+
+  .shorten-form button {
+    margin-top: 12px;
+  }
 }
