--- a/src/components/UI/Button.css
+++ b/src/components/UI/Button.css
@@ -21,10 +21,6 @@ button.primary:hover {
   display: block;
 }
 
-.mt {
-  margin-top: 12px;
-}
-
 @media screen and (max-width: 900px) {
   .btn-form {
     width: 90%;
