--- a/src/components/UI/Input.css
+++ b/src/components/UI/Input.css
@@ -2,11 +2,10 @@
   width: 60%;
 }
 
-input {
+input[type='text'] {
   width: 100%;
-  display: inline-block;
+  display: block;
   padding: 14px 16px;
-  font-size: 16px;
   border-radius: 12px;
   border: none;
   box-sizing: border-box;
